Add gantt diagram to schedule

--- a/writing/proposal/main.tex
+++ b/writing/proposal/main.tex
@@ -6,6 +6,7 @@
 	biblatexOptions={natbib=true,backend=biber},%
 	acronymOptions={smaller,printonlyused},%,withpage
 ]{ifiseries}
+\usepackage{pgfgantt}
 %\usepackage[language=english,theorems=numbersfirst,paper=a4paper]{ifiseries}
 % <++USE language=german IF YOUR DOCUMENT WILL BE IN GERMAN ++>
 
