--- a/writing/proposal/bibliography.bib
+++ b/writing/proposal/bibliography.bib
@@ -1,58 +1,39 @@
-@misc{AspectJ,
-     sorttitle = {AspectJ},
-         label = {AspectJ},
-         title = {{AspectJ} language extension},
-  organization = {Eclipse Foundation},
-           url = {http://www.eclipse.org/aspectj/},
+@article{ASHOURI2021100346,
+title = {Quality attributes in edge computing for the Internet of Things: A systematic mapping study},
+journal = {Internet of Things},
+volume = {13},
+pages = {100346},
+year = {2021},
+issn = {2542-6605},
+doi = {https://doi.org/10.1016/j.iot.2020.100346},
+url = {https://www.sciencedirect.com/science/article/pii/S2542660520301773},
+author = {Majid Ashouri and Paul Davidsson and Romina Spalazzese},
+keywords = {Internet of Things, Edge computing, Quality attributes, Metrics, Systematic mapping study},
+abstract = {Many Internet of Things (IoT) systems generate a massive amount of data needing to be processed and stored efficiently. Cloud computing solutions are often used to handle these tasks. However, the increasing availability of computational resources close to the edge has prompted the idea of using these for distributed computing and storage. Edge computing may help to improve IoT systems regarding important quality attributes like latency, energy consumption, privacy, and bandwidth utilization. However, deciding where to deploy the various application components is not a straightforward task. This is largely due to the trade-offs between the quality attributes relevant for the application. We have performed a systematic mapping study of 98 articles to investigate which quality attributes have been used in the literature for assessing IoT systems using edge computing. The analysis shows that time behavior and resource utilization are the most frequently used quality attributes; further, response time, turnaround time, and energy consumption are the most used metrics for quantifying these quality attributes. Moreover, simulation is the main tool used for the assessments, and the studied trade-offs are mainly between only two qualities. Finally, we identified a number of research gaps that need further study.}
 }
 
-@inproceedings{Shaw2003,
-        author = {Mary Shaw},
-         title = {Writing good software engineering research papers: minitutorial},
-     booktitle = {Proceedings of the 25th International Conference on Software Engineering (ICSE 2003)},
-          year = {2003},
-         month = may,
-         pages = {726--736},
-     publisher = {IEEE Computer Society},
-}
-
-@INPROCEEDINGS{Hoorn2012,
-          author = {van Hoorn, Andr{\'e} and Waller, Jan and Hasselbring, Wilhelm},
-           title = {Kieker: {A} Framework for Application Performance Monitoring and Dynamic Software Analysis},
-       booktitle = {Proceedings of the 3rd ACM/SPEC International Conference on Performance Engineering (ICPE~2012)},
-            year = {2012},
-           pages = {247--248},
-           month = apr,
-       publisher = {ACM}
-}
-
-@TECHREPORT{Hoorn2009,
-  author = {van Hoorn, Andr{\'e} and Rohr, Matthias and Hasselbring, Wilhelm and Waller, Jan and Ehlers, Jens and Frey, S{\"o}ren and Kieselhorst, Dennis},
-  title = {Continuous Monitoring of Software Services: {D}esign and Application of the {K}ieker Framework},
-  institution = {Department of Computer Science, Kiel University, Germany},
-  year = {2009},
-  number = {TR-0921},
-  month = nov,
+@ARTICLE{10258346,
+  author={Syu, Jia-Hao and Lin, Jerry Chun-Wei and Srivastava, Gautam and Yu, Keping},
+  journal={IEEE Transactions on Consumer Electronics}, 
+  title={A Comprehensive Survey on Artificial Intelligence Empowered Edge Computing on Consumer Electronics}, 
+  year={2023},
+  volume={69},
+  number={4},
+  pages={1023-1034},
+  keywords={Consumer electronics;Edge computing;Artificial intelligence;Smart homes;Machine learning;Smart buildings;Smart healthcare;Consumer electronics;artificial intelligence;edge computing;smart homes;smart buildings;smart healthcare},
+  doi={10.1109/TCE.2023.3318150}
 }
 
 
-@inproceedings{Rohr2008,
-          author = {Rohr, Matthias and van Hoorn, Andr{\'e} and Matevska, Jasminka and Sommer, Nils and Stoever, Lena and Giesecke, Simon and Hasselbring, Wilhelm},
-       booktitle = {Proceedings of the IASTED International Conference on Software Engineering 2008 (SE'08)},
-           title = {Kieker: {C}ontinuous Monitoring and on demand Visualization of {J}ava Software Behavior},
-       publisher = {ACTA Press},
-            year = {2008},
-           pages = {80--85},
-		   month = feb,
+@ARTICLE{7488250,
+  author={Shi, Weisong and Cao, Jie and Zhang, Quan and Li, Youhuizi and Xu, Lanyu},
+  journal={IEEE Internet of Things Journal}, 
+  title={Edge Computing: Vision and Challenges}, 
+  year={2016},
+  volume={3},
+  number={5},
+  pages={637-646},
+  keywords={Cloud computing;Internet of things;Bandwidth;Time factors;Mobile handsets;Data privacy;Smart homes;Edge computing;Internet of Things (IoT);smart home and city},
+  doi={10.1109/JIOT.2016.2579198}
 }
 
-@ARTICLE{Frey2011,
-  author = {Frey, S{\"o}ren and Hasselbring, Wilhelm},
-  title = {The {CloudMIG} Approach: {M}odel-Based Migration of Software Systems to Cloud-Optimized Applications},
-  journal = {International Journal on Advances in Software},
-  year = {2011},
-  volume = {4},
-  pages = {342--353},
-  number = {3},
-  month = apr,
-}
