--- a/writing/proposal/bibliography.bib
+++ b/writing/proposal/bibliography.bib
@@ -37,3 +37,55 @@ abstract = {Many Internet of Things (IoT) systems generate a massive amount of d
   doi={10.1109/JIOT.2016.2579198}
 }
 
+@INPROCEEDINGS{10134901,
+  author={Rajaraman, Sanjay and Shivapriya, Ps},
+  booktitle={2023 3rd International conference on Artificial Intelligence and Signal Processing (AISP)}, 
+  title={A-Eye: Computer vision and Deep learning based Smart-Glasses with Edge computing for Visually Impaired}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-5},
+  keywords={Multi-access edge computing;Blindness;Streaming media;Signal processing;Mobile handsets;Mobile applications;Artificial intelligence;Artificial intelligence;Internet of Things (IoT);computer vision;Deep learning;Mobile Edge Computing},
+  doi={10.1109/AISP57993.2023.10134901}}
+
+@ARTICLE{9546662,
+  author={Liu, Guanxiong and Shi, Hang and Kiani, Abbas and Khreishah, Abdallah and Lee, Joyoung and Ansari, Nirwan and Liu, Chengjun and Yousef, Mustafa Mohammad},
+  journal={IEEE Transactions on Intelligent Transportation Systems}, 
+  title={Smart Traffic Monitoring System Using Computer Vision and Edge Computing}, 
+  year={2022},
+  volume={23},
+  number={8},
+  pages={12027-12038},
+  keywords={Clouds;Cameras;Edge computing;Image edge detection;Computational modeling;Cloud computing;Monitoring;Traffic monitoring;incidents detection;edge-computing;video analytic},
+  doi={10.1109/TITS.2021.3109481}
+  }
+
+@book{10.5555/3175917,
+author = {Hightower, Kelsey and Burns, Brendan and Beda, Joe},
+title = {Kubernetes: Up and Running Dive into the Future of Infrastructure},
+year = {2017},
+isbn = {1491935677},
+publisher = {O'Reilly Media, Inc.},
+edition = {1st},
+abstract = {Legend has it that Google deploys over two billion application containers a week. Hows that possible? Google revealed the secret through a project called Kubernetes, an open source cluster orchestrator (based on its internal Borg system) that radically simplifies the task of building, deploying, and maintaining scalable distributed systems in the cloud. This practical guide shows you how Kubernetes and container technology can help you achieve new levels of velocity, agility, reliability, and efficiency. Authors Kelsey Hightower, Brendan Burns, and Joe Bedawhove worked on Kubernetes at Google and other organizatons explain how this system fits into the lifecycle of a distributed application. You will learn how to use tools and APIs to automate scalable distributed systems, whether it is for online services, machine-learning applications, or a cluster of Raspberry Pi computers. Explore the distributed system challenges that Kubernetes addresses Dive into containerized application development, using containers such as Docker Create and run containers on Kubernetes, using the docker image format and container runtime Explore specialized objects essential for running applications in production Reliably roll out new software versions without downtime or errors Get examples of how to develop and deploy real-world applications in Kubernetes}
+}
+
+@article{10.1145/3539606,
+author = {Carri\'{o}n, Carmen},
+title = {Kubernetes Scheduling: Taxonomy, Ongoing Issues and Challenges},
+year = {2022},
+issue_date = {July 2023},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {55},
+number = {7},
+issn = {0360-0300},
+url = {https://doi.org/10.1145/3539606},
+doi = {10.1145/3539606},
+abstract = {Continuous integration enables the development of microservices-based applications using container virtualization technology. Container orchestration systems such as Kubernetes, which has become the de facto standard, simplify the deployment of container-based applications. However, developing efficient and well-defined orchestration systems is a challenge. This article focuses specifically on the scheduler, a key orchestrator task that assigns physical resources to containers. Scheduling approaches are designed based on different Quality of Service (QoS) parameters to provide limited response time, efficient energy consumption, better resource utilization, and other things. This article aims to establish insight knowledge into Kubernetes scheduling, find the main gaps, and thus guide future research in the area. Therefore, we conduct a study of empirical research on Kubernetes scheduling techniques and present a new taxonomy for Kubernetes scheduling. The challenges, future direction, and research opportunities are also discussed.},
+journal = {ACM Comput. Surv.},
+month = dec,
+articleno = {138},
+numpages = {37},
+keywords = {survey, containers, scheduling, orchestration, Kubernetes}
+}
