--- a/writing/proposal/bibliography.bib
+++ b/writing/proposal/bibliography.bib
@@ -89,3 +89,74 @@ articleno = {138},
 numpages = {37},
 keywords = {survey, containers, scheduling, orchestration, Kubernetes}
 }
+
+@ARTICLE{10612841,
+  author={Lu, Qiu and Li, Gaoxing and Ye, Hengzhou},
+  journal={IEEE Internet of Things Journal}, 
+  title={EdgeSim++: A Realistic, Versatile, and Easily Customizable Edge Computing Simulator}, 
+  year={2024},
+  volume={11},
+  number={21},
+  pages={35341-35360},
+  keywords={Edge computing;Task analysis;Internet of Things;Resource management;Machine learning;Computer architecture;Machine learning algorithms;Artificial intelligence;cloud computing;edge computing;machine learning;modeling and simulation;resource management;task offloading},
+  doi={10.1109/JIOT.2024.3434641}}
+
+@article{10.1002/ett.3493,
+  author = {Sonmez, Cagatay and Ozgovde, Atay and Ersoy, Cem},
+  title = {EdgeCloudSim: An environment for performance evaluation of edge computing systems},
+  year = {2018},
+  issue_date = {November 2018},
+  publisher = {John Wiley \& Sons, Inc.},
+  address = {USA},
+  volume = {29},
+  number = {11},
+  url = {https://doi.org/10.1002/ett.3493},
+  doi = {10.1002/ett.3493},
+  journal = {Trans. Emerg. Telecommun. Technol.},
+  month = nov,
+  numpages = {1}
+}
+
+@misc{gupta2016ifogsimtoolkitmodelingsimulation,
+      title={iFogSim: A Toolkit for Modeling and Simulation of Resource Management Techniques in Internet of Things, Edge and Fog Computing Environments}, 
+      author={Harshit Gupta and Amir Vahid Dastjerdi and Soumya K. Ghosh and Rajkumar Buyya},
+      year={2016},
+      eprint={1606.02007},
+      archivePrefix={arXiv},
+      primaryClass={cs.DC},
+      url={https://arxiv.org/abs/1606.02007}, 
+}
+
+@ARTICLE{8758823,
+  author={Lera, Isaac and Guerrero, Carlos and Juiz, Carlos},
+  journal={IEEE Access}, 
+  title={YAFS: A Simulator for IoT Scenarios in Fog Computing}, 
+  year={2019},
+  volume={7},
+  number={},
+  pages={91745-91758},
+  keywords={Relays;Large scale integration;Wireless communication;OFDM;Interference cancellation;Channel estimation;Real-time systems;Complex networks;fog computing;Internet of Things;simulator},
+  doi={10.1109/ACCESS.2019.2927895}}
+
+  @ARTICLE{8502760,
+  author={Qayyum, Tariq and Malik, Asad Waqar and Khan Khattak, Muazzam A. and Khalid, Osman and Khan, Samee U.},
+  journal={IEEE Access}, 
+  title={FogNetSim++: A Toolkit for Modeling and Simulation of Distributed Fog Environment}, 
+  year={2018},
+  volume={6},
+  number={},
+  pages={63570-63583},
+  keywords={Cloud computing;Edge computing;Computational modeling;Sensors;Data centers;Protocols;Resource management;Cloud;fog;edge network;IoT;mobility models;OMNeT++},
+  doi={10.1109/ACCESS.2018.2877696}}
+
+  @INPROCEEDINGS{9188059,
+  author={Mechalikh, Charafeddine and Taktak, Hajer and Moussa, Faouzi},
+  booktitle={2019 International Conference on High Performance Computing \& Simulation (HPCS)}, 
+  title={PureEdgeSim: A Simulation Toolkit for Performance Evaluation of Cloud, Fog, and Pure Edge Computing Environments}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={700-707},
+  keywords={Cloud computing;Computational modeling;Edge computing;Task analysis;Load modeling;Peer-to-peer computing;Performance evaluation;Simulation;Modeling;Edge Computing;Fog;Cloud;Load Balancing;Internet of Things.},
+  doi={10.1109/HPCS48598.2019.9188059}}
+
