--- a/writing/proposal/bibliography.bib
+++ b/writing/proposal/bibliography.bib
@@ -160,3 +160,37 @@ keywords = {survey, containers, scheduling, orchestration, Kubernetes}
   keywords={Cloud computing;Computational modeling;Edge computing;Task analysis;Load modeling;Peer-to-peer computing;Performance evaluation;Simulation;Modeling;Edge Computing;Fog;Cloud;Load Balancing;Internet of Things.},
   doi={10.1109/HPCS48598.2019.9188059}}
 
+
+
+@misc{prometheus2024,
+title = {Prometheus: Monitoring system and time series database},
+author = {{Prometheus Team}},
+year = {2024},
+url = {https://prometheus.io/},
+note = {Accessed: June 2025}
+}
+
+@misc{kafka2024,
+title = {Apache Kafka: A distributed streaming platform},
+author = {{Apache Software Foundation}},
+year = {2024},
+url = {https://kafka.apache.org/},
+note = {Accessed: June 2025}
+}
+
+@misc{kepler2024,
+title = {Kepler: Kubernetes Efficient Power Level Exporter},
+author = {{Sustainable Computing Consortium}},
+year = {2024},
+url = {https://sustainable-computing.io/},
+note = {Accessed: June 2025}
+}
+
+@misc{chaosmesh2024,
+title = {Chaos Mesh: A Powerful Chaos Engineering Platform for Kubernetes},
+author = {{PingCAP}},
+year = {2024},
+url = {https://chaos-mesh.org/},
+note = {Accessed: June 2025}
+}
+
