Fix typo and extend testing stage approach description

--- a/writing/proposal/bibliography.bib
+++ b/writing/proposal/bibliography.bib
@@ -194,3 +194,13 @@ url = {https://chaos-mesh.org/},
 note = {Accessed: June 2025}
 }
 
+@misc{pfandzelter2024lessonslearnedbuildingedge,
+      title={Lessons Learned from Building Edge Software System Testbeds}, 
+      author={Tobias Pfandzelter and David Bermbach},
+      year={2024},
+      eprint={2403.16869},
+      archivePrefix={arXiv},
+      primaryClass={cs.DC},
+      url={https://arxiv.org/abs/2403.16869}, 
+}
+
