Update thesis structure and add some todos

--- a/writing/thesis/main.tex
+++ b/writing/thesis/main.tex
@@ -53,8 +53,7 @@
 \cleardoublepage
 \studeidesstatt
 
-%\chapter*{Abstract}
-%\blindtext
+\include{chapter/00_abstract}
 
 %\section*{Acknowledgements}
 %<++ACKNOWLEDGEMENTS++>
@@ -69,9 +68,10 @@
 \include{chapter/01_introduction}
 \include{chapter/02_foundations}
 \include{chapter/03_state_of_art}
-\include{chapter/04_ecoscape}
-\include{chapter/05_evaluation}
-\include{chapter/06_conclusion}
+\include{chapter/04_requirements_catalogue}
+\include{chapter/05_ecoscape}
+\include{chapter/06_evaluation}
+\include{chapter/07_conclusion}
 
 \backmatter
 \tocbibliography
