Rename files for structure

--- a/writing/thesis/main.tex
+++ b/writing/thesis/main.tex
@@ -67,7 +67,7 @@
 %% use \include{filename} and \includeonly{filename} to organize your thesis
 \include{chapter/01_introduction}
 \include{chapter/02_foundations}
-\include{chapter/03_state_of_art}
+\include{chapter/03_state_of_the_art}
 \include{chapter/04_requirements_catalogue}
 \include{chapter/05_ecoscape}
 \include{chapter/06_evaluation}
