--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -1,58 +1,227 @@
-@misc{AspectJ,
-     sorttitle = {AspectJ},
-         label = {AspectJ},
-         title = {{AspectJ} language extension},
-  organization = {Eclipse Foundation},
-           url = {http://www.eclipse.org/aspectj/},
+@ARTICLE{10258346,
+  author={Syu, Jia-Hao and Lin, Jerry Chun-Wei and Srivastava, Gautam and Yu, Keping},
+  journal={IEEE Transactions on Consumer Electronics}, 
+  title={A Comprehensive Survey on Artificial Intelligence Empowered Edge Computing on Consumer Electronics}, 
+  year={2023},
+  volume={69},
+  number={4},
+  pages={1023-1034},
+  keywords={Consumer electronics;Edge computing;Artificial intelligence;Smart homes;Machine learning;Smart buildings;Smart healthcare;Consumer electronics;artificial intelligence;edge computing;smart homes;smart buildings;smart healthcare},
+  doi={10.1109/TCE.2023.3318150}
 }
 
-@inproceedings{Shaw2003,
-        author = {Mary Shaw},
-         title = {Writing good software engineering research papers: minitutorial},
-     booktitle = {Proceedings of the 25th International Conference on Software Engineering (ICSE 2003)},
-          year = {2003},
-         month = may,
-         pages = {726--736},
-     publisher = {IEEE Computer Society},
+@ARTICLE{7488250,
+  author={Shi, Weisong and Cao, Jie and Zhang, Quan and Li, Youhuizi and Xu, Lanyu},
+  journal={IEEE Internet of Things Journal}, 
+  title={Edge Computing: Vision and Challenges}, 
+  year={2016},
+  volume={3},
+  number={5},
+  pages={637-646},
+  keywords={Cloud computing;Internet of things;Bandwidth;Time factors;Mobile handsets;Data privacy;Smart homes;Edge computing;Internet of Things (IoT);smart home and city},
+  doi={10.1109/JIOT.2016.2579198}
 }
 
-@INPROCEEDINGS{Hoorn2012,
-          author = {van Hoorn, Andr{\'e} and Waller, Jan and Hasselbring, Wilhelm},
-           title = {Kieker: {A} Framework for Application Performance Monitoring and Dynamic Software Analysis},
-       booktitle = {Proceedings of the 3rd ACM/SPEC International Conference on Performance Engineering (ICPE~2012)},
-            year = {2012},
-           pages = {247--248},
-           month = apr,
-       publisher = {ACM}
+@article{ASHOURI2021100346,
+  title = {Quality attributes in edge computing for the Internet of Things: A systematic mapping study},
+  journal = {Internet of Things},
+  volume = {13},
+  pages = {100346},
+  year = {2021},
+  issn = {2542-6605},
+  doi = {https://doi.org/10.1016/j.iot.2020.100346},
+  url = {https://www.sciencedirect.com/science/article/pii/S2542660520301773},
+  author = {Majid Ashouri and Paul Davidsson and Romina Spalazzese},
+  keywords = {Internet of Things, Edge computing, Quality attributes, Metrics, Systematic mapping study},
+  abstract = {Many Internet of Things (IoT) systems generate a massive amount of data needing to be processed and stored efficiently. Cloud computing solutions are often used to handle these tasks. However, the increasing availability of computational resources close to the edge has prompted the idea of using these for distributed computing and storage. Edge computing may help to improve IoT systems regarding important quality attributes like latency, energy consumption, privacy, and bandwidth utilization. However, deciding where to deploy the various application components is not a straightforward task. This is largely due to the trade-offs between the quality attributes relevant for the application. We have performed a systematic mapping study of 98 articles to investigate which quality attributes have been used in the literature for assessing IoT systems using edge computing. The analysis shows that time behavior and resource utilization are the most frequently used quality attributes; further, response time, turnaround time, and energy consumption are the most used metrics for quantifying these quality attributes. Moreover, simulation is the main tool used for the assessments, and the studied trade-offs are mainly between only two qualities. Finally, we identified a number of research gaps that need further study.}
 }
 
-@TECHREPORT{Hoorn2009,
-  author = {van Hoorn, Andr{\'e} and Rohr, Matthias and Hasselbring, Wilhelm and Waller, Jan and Ehlers, Jens and Frey, S{\"o}ren and Kieselhorst, Dennis},
-  title = {Continuous Monitoring of Software Services: {D}esign and Application of the {K}ieker Framework},
-  institution = {Department of Computer Science, Kiel University, Germany},
-  year = {2009},
-  number = {TR-0921},
-  month = nov,
+% ---------
+% Simulators
+% > CloudSim (Base)
+@article{sim-base-cloudsim,
+  title = {Cloudsim: simulator for cloud computing infrastructure and modeling},
+  journal = {Procedia Engineering},
+  volume = {38},
+  pages = {3566-3572},
+  year = {2012},
+  note = {INTERNATIONAL CONFERENCE ON MODELLING OPTIMIZATION AND COMPUTING},
+  issn = {1877-7058},
+  doi = {https://doi.org/10.1016/j.proeng.2012.06.412},
+  url = {https://www.sciencedirect.com/science/article/pii/S1877705812023259},
+  author = {Tarun Goyal and Ajit Singh and Aakanksha Agrawal},
+  keywords = {Cloud Computing, CloudSim, Simulation and Data center\},
+  abstract = {Cloud Computing aims to deliver reliable, secure, fault-tolerant, sustainable and scalable infrastructure for hosting Internet-based application services. To model and schedule the different applications and services for cloud infrastructure system is an tremendous challenging task which requires different load and energy performance. This problem is solved by introducing CloudSim: a simulation framework that provides simulation, power to manage services and modelling of cloud infrastructure. In this paper we have discussed about the working of CloudSim & about its updated versions.}
+}
+
+% > EdgeSimPy (Base)
+@article{sim-base-edgeSimpy,
+  title = {EdgeSimPy: Python-based modeling and simulation of edge computing resource management policies},
+  journal = {Future Generation Computer Systems},
+  volume = {148},
+  pages = {446-459},
+  year = {2023},
+  issn = {0167-739X},
+  doi = {https://doi.org/10.1016/j.future.2023.06.013},
+  url = {https://www.sciencedirect.com/science/article/pii/S0167739X23002340},
+  author = {Paulo S. Souza and Tiago Ferreto and Rodrigo N. Calheiros},
+  keywords = {Simulation, Modeling, Edge computing, Resource management, Containers, Python},
+  abstract = {The increasing popularity of applications with tight latency requirements has motivated research on Edge Computing, which positions computing resources near data sources at the Internet’s edge. Despite the emergence of simulation tools that make prototype validation less complex, time-consuming, and expensive, researchers and practitioners still face significant challenges when developing resource management strategies for the edge, as existing simulators fall short in providing a fine-grained model of edge applications provisioning. To overcome this challenge, we propose EdgeSimPy, a simulation framework written in Python for modeling and evaluating resource management policies in Edge Computing environments. EdgeSimPy features a modular architecture that incorporates several functional abstractions for edge servers, network devices, and applications with built-in models for user mobility, application composition, and power consumption that allow the simulation of various scenarios. Furthermore, we propose a novel conceptual model that accurately represents the entire lifecycle of edge applications and ensures seamless integration with real application traces. In addition to submitting EdgeSimPy to an in-depth verification that checks the simulator implementation, we discuss case studies that show EdgeSimPy in action in different large-scale scenarios.}
+}
+
+% > FogTorch (Base)
+@ARTICLE{sim-base-fogtorch,
+  author={Brogi, Antonio and Forti, Stefano},
+  journal={IEEE Internet of Things Journal}, 
+  title={QoS-Aware Deployment of IoT Applications Through the Fog}, 
+  year={2017},
+  volume={4},
+  number={5},
+  pages={1185-1192},
+  keywords={Internet of things;Cloud computing;Quality of service;Bandwidth;Computational modeling;Sensors;Fog computing;IoT;QoS-aware deployment},
+  doi={10.1109/JIOT.2017.2701408}
+}
+
+% > iFogSim1 (Base)
+@misc{sim-base-ifogsim1,
+  title={iFogSim: A Toolkit for Modeling and Simulation of Resource Management Techniques in Internet of Things, Edge and Fog Computing Environments}, 
+  author={Harshit Gupta and Amir Vahid Dastjerdi and Soumya K. Ghosh and Rajkumar Buyya},
+  year={2016},
+  eprint={1606.02007},
+  archivePrefix={arXiv},
+  primaryClass={cs.DC},
+  url={https://arxiv.org/abs/1606.02007}, 
+}
+% > EdgeAISim
+@article{sim-edgeAIsim,
+   title={EdgeAISim: A toolkit for simulation and modelling of AI models in edge computing environments},
+   volume={31},
+   ISSN={2665-9174},
+   url={http://dx.doi.org/10.1016/j.measen.2023.100939},
+   DOI={10.1016/j.measen.2023.100939},
+   journal={Measurement: Sensors},
+   publisher={Elsevier BV},
+   author={Nandhakumar, Aadharsh Roshan and Baranwal, Ayush and Choudhary, Priyanshukumar and Golec, Muhammed and Gill, Sukhpal Singh},
+   year={2024},
+   month=feb, pages={100939} 
+}
+
+% > EdgeCloudSim
+@article{sim-edgecloudsim,
+  author = {Sonmez, Cagatay and Ozgovde, Atay and Ersoy, Cem},
+  title = {EdgeCloudSim: An environment for performance evaluation of edge computing systems},
+  journal = {Transactions on Emerging Telecommunications Technologies},
+  volume = {29},
+  number = {11},
+  pages = {e3493},
+  doi = {https://doi.org/10.1002/ett.3493},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ett.3493},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ett.3493},
+  note = {e3493 ett.3493},
+  abstract = {Abstract Edge computing is a fast growing field of research that covers a spectrum of technologies bringing the cloud computing services closer to the end user. Growing interest in this area yields many edge computing approaches that need to be evaluated and optimized. Experimenting on the real cloud environments is not always feasible due to the operational cost and the scalability. Despite increasing research activity, this field lacks a simulation tool that supports the modeling of both computational and networking resources to handle the edge computing scenarios. Existing network simulators can model the network behavior at different levels of granularity. The cloud computing simulators support the modeling and simulation of the computational infrastructures and services efficiently. Starting from the available simulators, a significant programming effort is required to obtain a simulation tool meeting the actual needs. On the other hand, designing a new edge computing tool has many challenges such as the scalability, extensibility, and modeling the mobility, network, and virtualized resources. To decrease the barriers, a new simulator tool called EdgeCloudSim streamlined for the edge computing scenarios is proposed in this work. EdgeCloudSim builds upon CloudSim to address the specific demands of edge computing research and support the necessary functionalities. To demonstrate the capabilities of EdgeCloudSim, an experiment setup based on different edge architectures is simulated. In addition, the effect of the edge server capacity and the mobility on the overall system performance are investigated.},
+  year = {2018}
+}
+
+% > EmuFog
+@INPROCEEDINGS{sim-emufog,
+  author={Mayer, Ruben and Graser, Leon and Gupta, Harshit and Saurez, Enrique and Ramachandran, Umakishore},
+  booktitle={2017 IEEE Fog World Congress (FWC)}, 
+  title={EmuFog: Extensible and scalable emulation of large-scale fog computing infrastructures}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={Edge computing;Network topology;Emulation;Topology;Partitioning algorithms;Computational modeling;Resource management;Fog Computing;Emulation Framework},
+  doi={10.1109/FWC.2017.8368525}
+}
+
+% > Fogify
+@INPROCEEDINGS{sim-fogify,
+  author={Symeonides, Moysis and Georgiou, Zacharias and Trihinas, Demetris and Pallis, George and Dikaiakos, Marios D.},
+  booktitle={2020 IEEE/ACM Symposium on Edge Computing (SEC)}, 
+  title={Fogify: A Fog Computing Emulation Framework}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={42-54},
+  keywords={Runtime;Network topology;Emulation;Rapid prototyping;Topology;Internet of Things;Edge computing;Fog Computing;Internet of Things},
+  doi={10.1109/SEC50012.2020.00011}
+}
+
+% > FogNetSim++
+@ARTICLE{sim-fognetsim++,
+  author={Qayyum, Tariq and Malik, Asad Waqar and Khan Khattak, Muazzam A. and Khalid, Osman and Khan, Samee U.},
+  journal={IEEE Access}, 
+  title={FogNetSim++: A Toolkit for Modeling and Simulation of Distributed Fog Environment}, 
+  year={2018},
+  volume={6},
+  number={},
+  pages={63570-63583},
+  keywords={Cloud computing;Edge computing;Computational modeling;Sensors;Data centers;Protocols;Resource management;Cloud;fog;edge network;IoT;mobility models;OMNeT++},
+  doi={10.1109/ACCESS.2018.2877696}
+}
+
+% > FogTorchPi
+@INBOOK{sim-fogtorchpi,
+  author={Buyya, Rajkumar and Srirama, Satish Narayana},
+  booktitle={Fog and Edge Computing: Principles and Paradigms}, 
+  title={Predictive Analysis to Support Fog Application Deployment}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={191-221},
+  keywords={Quality of service;Cloud computing;Bandwidth;Hardware;Smart buildings;Internet of Things;Software},
+  doi={10.1002/9781119525080.ch9}
+}
+
+% > iContinuum
+@INPROCEEDINGS{sim-icontinuum,
+  author={Akbari, Negin and Toosi, Adel N. and Grundy, John and Khalajzadeh, Hourieh and Aslanpour, Mohammad S. and Ilager, Shashikant},
+  booktitle={2024 IEEE 17th International Conference on Cloud Computing (CLOUD)}, 
+  title={iContinuum: An Emulation Toolkit for Intent-Based Computing Across the Edge-to-Cloud Continuum}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={468-474},
+  keywords={Cloud computing;Scalability;Emulation;Real-time systems;Internet of Things;Resource management;Surges;Compute Continuum;Emulation;IBN;Intents;SDN;Container Orchestration;Kubernetes},
+  doi={10.1109/CLOUD62652.2024.00059}
 }
 
 
-@inproceedings{Rohr2008,
-          author = {Rohr, Matthias and van Hoorn, Andr{\'e} and Matevska, Jasminka and Sommer, Nils and Stoever, Lena and Giesecke, Simon and Hasselbring, Wilhelm},
-       booktitle = {Proceedings of the IASTED International Conference on Software Engineering 2008 (SE'08)},
-           title = {Kieker: {C}ontinuous Monitoring and on demand Visualization of {J}ava Software Behavior},
-       publisher = {ACTA Press},
-            year = {2008},
-           pages = {80--85},
-		   month = feb,
+% > iFogSim2
+@misc{sim-ifogsim2,
+  title={IFogSim2: An Extended iFogSim Simulator for Mobility, Clustering, and Microservice Management in Edge and Fog Computing Environments}, 
+  author={Redowan Mahmud and Samodha Pallewatta and Mohammad Goudarzi and Rajkumar Buyya},
+  year={2021},
+  eprint={2109.05636},
+  archivePrefix={arXiv},
+  primaryClass={cs.DC},
+  url={https://arxiv.org/abs/2109.05636}, 
 }
 
-@ARTICLE{Frey2011,
-  author = {Frey, S{\"o}ren and Hasselbring, Wilhelm},
-  title = {The {CloudMIG} Approach: {M}odel-Based Migration of Software Systems to Cloud-Optimized Applications},
-  journal = {International Journal on Advances in Software},
-  year = {2011},
-  volume = {4},
-  pages = {342--353},
-  number = {3},
-  month = apr,
+% > MockFog 2.0
+@ARTICLE{sim-mockfog2,
+  author={Hasenburg, Jonathan and Grambow, Martin and Bermbach, David},
+  journal={IEEE Transactions on Cloud Computing}, 
+  title={MockFog 2.0: Automated Execution of Fog Application Experiments in the Cloud}, 
+  year={2023},
+  volume={11},
+  number={1},
+  pages={58-70},
+  keywords={Cloud computing;Testing;Benchmark testing;Generators;Emulation;Containers;Schedules;Fog computing;cloud computing;testing;benchmarking;infrastructure emulation;experiment orchestration},
+  doi={10.1109/TCC.2021.3074988}
 }
+
+% > YAFS (Yet Another Fog Simulator)
+@ARTICLE{sim-yafs,
+  author={Lera, Isaac and Guerrero, Carlos and Juiz, Carlos},
+  journal={IEEE Access}, 
+  title={YAFS: A Simulator for IoT Scenarios in Fog Computing}, 
+  year={2019},
+  volume={7},
+  number={},
+  pages={91745-91758},
+  keywords={Relays;Large scale integration;Wireless communication;OFDM;Interference cancellation;Channel estimation;Real-time systems;Complex networks;fog computing;Internet of Things;simulator},
+  doi={10.1109/ACCESS.2019.2927895}
+}
+
