Make sure of right color for printing

--- a/writing/thesis/main.tex
+++ b/writing/thesis/main.tex
@@ -37,7 +37,7 @@
 \ExecuteBibliographyOptions{isbn=false,url=true,doi=true,eprint=false}
 \addbibresource{bibliography.bib}
 % <++PERHAPS CHANGE NAME OF BIBLIOGRAPHY RESOURCE ON LINE ABOVE OR ADD ADDITIONAL RESOURCES++>
-
+\color{black}
 \begin{document}
 
 \frontmatter
