Add edge computing fundamentals

--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -1,3 +1,14 @@
+@techreport{etsi_mec,
+    author = {{ETSI}},
+    title = {{ 	Multi-access Edge Computing (MEC); Terminology }},
+    institution = {European Telecommunications Standards Institute},
+    type = {Technical Specification},
+    number = {ETSI GR MEC 001 V3.2.1},
+    year = {2024},
+    month = {2},
+    url = {https://www.etsi.org/deliver/etsi_gr/MEC/001_099/001/03.02.01_60/gr_MEC001v030201p.pdf}
+}
+
 @ARTICLE{10258346,
   author={Syu, Jia-Hao and Lin, Jerry Chun-Wei and Srivastava, Gautam and Yu, Keping},
   journal={IEEE Transactions on Consumer Electronics}, 
@@ -22,6 +33,18 @@
   doi={10.1109/JIOT.2016.2579198}
 }
 
+@ARTICLE{5280678,
+  author={Satyanarayanan, Mahadev and Bahl, Paramvir and Caceres, Ramon and Davies, Nigel},
+  journal={IEEE Pervasive Computing}, 
+  title={The Case for VM-Based Cloudlets in Mobile Computing}, 
+  year={2009},
+  volume={8},
+  number={4},
+  pages={14-23},
+  keywords={Mobile computing;Cloud computing;Computer architecture;Humans;Virtual manufacturing;Speech recognition;Natural language processing;Virtual machining;Wireless LAN;Internet;dynamic VM synthesis;cyber foraging;augmented reality;cognitive augmentation;virtual machines;resource constraints},
+  doi={10.1109/MPRV.2009.82}
+}
+
 @article{ASHOURI2021100346,
   title = {Quality attributes in edge computing for the Internet of Things: A systematic mapping study},
   journal = {Internet of Things},
@@ -34,6 +57,116 @@
   author = {Majid Ashouri and Paul Davidsson and Romina Spalazzese},
   keywords = {Internet of Things, Edge computing, Quality attributes, Metrics, Systematic mapping study},
   abstract = {Many Internet of Things (IoT) systems generate a massive amount of data needing to be processed and stored efficiently. Cloud computing solutions are often used to handle these tasks. However, the increasing availability of computational resources close to the edge has prompted the idea of using these for distributed computing and storage. Edge computing may help to improve IoT systems regarding important quality attributes like latency, energy consumption, privacy, and bandwidth utilization. However, deciding where to deploy the various application components is not a straightforward task. This is largely due to the trade-offs between the quality attributes relevant for the application. We have performed a systematic mapping study of 98 articles to investigate which quality attributes have been used in the literature for assessing IoT systems using edge computing. The analysis shows that time behavior and resource utilization are the most frequently used quality attributes; further, response time, turnaround time, and energy consumption are the most used metrics for quantifying these quality attributes. Moreover, simulation is the main tool used for the assessments, and the studied trade-offs are mainly between only two qualities. Finally, we identified a number of research gaps that need further study.}
+}
+
+@INPROCEEDINGS{8215403,
+  author={Li, Jianhua and Zhang, Tiehua and Jin, Jiong and Yang, Yingying and Yuan, Dong and Gao, Longxiang},
+  booktitle={2017 27th International Telecommunication Networks and Applications Conference (ITNAC)}, 
+  title={Latency estimation for fog-based internet of things}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={Delays;Peer-to-peer computing;Estimation;Springs;Economic indicators;Cloud computing;Servers;Fog computing;IoT;Vivaldi algorithm;GNP;latency},
+  doi={10.1109/ATNAC.2017.8215403}
+}
+
+@INPROCEEDINGS{1019408,
+  author={Wei Ye and Heidemann, J. and Estrin, D.},
+  booktitle={Proceedings.Twenty-First Annual Joint Conference of the IEEE Computer and Communications Societies}, 
+  title={An energy-efficient MAC protocol for wireless sensor networks}, 
+  year={2002},
+  volume={3},
+  number={},
+  pages={1567-1576 vol.3},
+  keywords={Energy efficiency;Media Access Protocol;Wireless application protocol;Wireless sensor networks;Sleep;Sensor phenomena and characterization;Delay;Energy consumption;Computer networks;Collaboration},
+  doi={10.1109/INFCOM.2002.1019408}
+}
+
+@INPROCEEDINGS{9498627,
+  author={Ibn-Khedher, Hatem and Laroui, Mohammed and Mabrouk, Mouna Ben and Moungla, Hassine and Afifi, Hossam and Oleari, Alberto Nai and Kamal, Ahmed E.},
+  booktitle={2021 International Wireless Communications and Mobile Computing (IWCMC)}, 
+  title={Edge Computing Assisted Autonomous Driving Using Artificial Intelligence}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={254-259},
+  keywords={Wireless communication;Cloud computing;Computer architecture;Reinforcement learning;Autopilot;Servers;Resource management;Edge Computing;Autonomous Vehicles (AV);Artificial Intelligence (AI);Optimization;Deep Reinforcement Learning (DRL)},
+  doi={10.1109/IWCMC51323.2021.9498627}
+}
+
+@article{XIE2024,
+  title = {Edge Computing for Real-Time Decision Making in Autonomous Driving: Review of Challenges, Solutions, and Future Trends},
+  journal = {International Journal of Advanced Computer Science and Applications},
+  doi = {10.14569/IJACSA.2024.0150759},
+  url = {http://dx.doi.org/10.14569/IJACSA.2024.0150759},
+  year = {2024},
+  publisher = {The Science and Information Organization},
+  volume = {15},
+  number = {7},
+  author = {Jihong XIE and Xiang ZHOU and Lu CHENG}
+}
+
+@article{SAVAGLIO2024397,
+  title = {Edge Intelligence for Industrial IoT: Opportunities and Limitations},
+  journal = {Procedia Computer Science},
+  volume = {232},
+  pages = {397-405},
+  year = {2024},
+  note = {5th International Conference on Industry 4.0 and Smart Manufacturing (ISM 2023)},
+  issn = {1877-0509},
+  doi = {https://doi.org/10.1016/j.procs.2024.01.039},
+  url = {https://www.sciencedirect.com/science/article/pii/S1877050924000395},
+  author = {Claudio Savaglio and Pasquale Mazzei and Giancarlo Fortino},
+  keywords = {Industrial Internet of Things, Edge Intelligence, Cloud Computing, Amazon AWS},
+  abstract = {Industrial Internet of Things (IIoT) nowadays represents a fundamental technology for the Industry 4.0 initiatives for connecting devices, operators and processes so as to eventually fuel digital transformation. However, if based exclusively on Cloud Computing, the IIoT faces inevitable limitations and barriers. Therefore, in this paper we deal with the Edge Intelligence (EI), a novel paradigm at the confluence of Edge Computing and artificial Intelligence, and, particularly, we analyze its impact on the processing of the IIoT data in the proximity of the events of interest rather than on Cloud servers. Therefore, a general discussion on the most relevant benefits, limitations and open challenges of the IIoT-EI duo is proposed hereinafter and exemplified through an emblematic IIoT use case: this is related to safety-critical tasks based on video analytics and provides a full-fledged comparison between Cloud-and EI-based IIoT deployments (in terms of reliability, responsiveness, bandwidth usage, energy footprint and usability), finally outlining a general strategy for large-scale EI-aided IIoT systems engineering.}
+}
+
+@article{JARARWEH2020102394,
+  title = {Trustworthy and sustainable smart city services at the edge},
+  journal = {Sustainable Cities and Society},
+  volume = {62},
+  pages = {102394},
+  year = {2020},
+  issn = {2210-6707},
+  doi = {https://doi.org/10.1016/j.scs.2020.102394},
+  url = {https://www.sciencedirect.com/science/article/pii/S2210670720306156},
+  author = {Yaser Jararweh and Safa Otoum and Ismaeel Al Ridhawi},
+  keywords = {Smart city, Availability, Reliability, Sustainability, Security, Edge computing, Internet of things},
+}
+
+@misc{herabad2024optimizingserviceplacementedgetocloud,
+  title={Optimizing Service Placement in Edge-to-Cloud AR/VR Systems using a Multi-Objective Genetic Algorithm}, 
+  author={Mohammadsadeq Garshasbi Herabad and Javid Taheri and Bestoun S. Ahmed and Calin Curescu},
+  year={2024},
+  eprint={2403.12849},
+  archivePrefix={arXiv},
+  primaryClass={cs.DC},
+  url={https://arxiv.org/abs/2403.12849}, 
+}
+
+@INPROCEEDINGS{11020287,
+  author={G.Palanikumar and Pandi, V.Samuthira and S.Banumathi and Karthikeyan, G. and Giri, Jayant and Al-Safarini, Maram Y.},
+  booktitle={2025 Fourth International Conference on Smart Technologies, Communication and Robotics (STCR)}, 
+  title={Leveraging Augmented and Virtual Reality in Conjunction with Artificial Intelligence, 5G, and Edge Computing to Transform Immersive Experiences}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={5G mobile communication;Telemedicine;Education;Entertainment industry;Medical services;Rendering (computer graphics);Real-time systems;Artificial intelligence;Autonomous vehicles;Edge computing;Immersive Experiences;edge Computing;Real-time Interaction;Personalized Experiences;Ultra-low Latency;Data Processing;Remote Education;Telemedicine;Autonomous Driving},
+  doi={10.1109/STCR62650.2025.11020287}
+}
+
+@INPROCEEDINGS{9767142,
+  author={Prabhu, Makarand and Hanumanthaiah, Aravind},
+  booktitle={2022 International Conference on Wireless Communications Signal Processing and Networking (WiSPNET)}, 
+  title={Edge Computing-Enabled Healthcare Framework to Provide Telehealth Services}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={349-353},
+  keywords={Wireless communication;Cloud computing;Medical devices;Telemedicine;Medical services;Signal processing;Foundries;Edge Computing;Internet of Things;telemedicine;EdgeX Foundry},
+  doi={10.1109/WiSPNET54241.2022.9767142}
 }
 
 % ---------
