--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -169,6 +169,40 @@
   doi={10.1109/WiSPNET54241.2022.9767142}
 }
 
+@article{DES-sota,
+  author = {Babulak, Eduard and Wang, Ming},
+  year = {2008},
+  month = {01},
+  pages = {60-63},
+  title = {Discrete Event Simulation: State of the Art},
+  volume = {4},
+  isbn = {978-953-307-115-2},
+  journal = {International Journal of Online Engineering (iJOE)},
+  doi = {10.5772/9894}
+}
+
+@article{DES-fptp,
+  author = {Robinson, Stewart},
+  year = {2005},
+  month = {06},
+  pages = {619-629},
+  title = {Discrete-event simulation: From the pioneers to the present, what next?},
+  volume = {56},
+  journal = {Journal of The Operational Research Society - J OPER RES SOC},
+  doi = {10.1057/palgrave.jors.2601864}
+}
+
+@inproceedings{inproceedings-sim-vs-emu,
+  author = {McGregor, I.},
+  year = {2003},
+  month = {01},
+  pages = {1683- 1688 vol.2},
+  title = {The relationship between simulation and emulation},
+  volume = {2},
+  isbn = {0-7803-7614-5},
+  doi = {10.1109/WSC.2002.1166451}
+}
+
 % ---------
 % Simulators
 % > CloudSim (Base)
